// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`agent sessionMode maps to default + workspaceWrite 1`] = `
{
  "approvalPolicy": "on-request",
  "collaborationMode": {
    "mode": "default",
    "settings": {
      "developer_instructions": "You coordinate research work without assuming a coding task.",
    },
  },
  "developer_instructions": "You coordinate research work without assuming a coding task.",
  "sandboxPolicy": "workspaceWrite",
}
`;

exports[`plan sessionMode maps to plan collaboration without developer instructions 1`] = `
{
  "approvalPolicy": "on-request",
  "collaborationMode": {
    "mode": "plan",
  },
  "developer_instructions": "You coordinate research work without assuming a coding task.",
  "sandboxPolicy": "workspaceWrite",
}
`;

exports[`ask sessionMode maps to default + readOnly without Eco ask append 1`] = `
{
  "approvalPolicy": "on-request",
  "collaborationMode": {
    "mode": "default",
    "settings": {
      "developer_instructions": "You coordinate research work without assuming a coding task.",
    },
  },
  "developer_instructions": "You coordinate research work without assuming a coding task.",
  "sandboxPolicy": "readOnly",
}
`;
